<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.maxwayapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.maxwayapp.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.maxwayapp.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.maxwayapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_profileEditFragment"
            app:destination="@id/profileEditFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_filliallarFragment"
            app:destination="@id/filliallarFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_sozlamalarFragment"
            app:destination="@id/sozlamalarFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_xizmatlarHaqidaFragment"
            app:destination="@id/xizmatlarHaqidaFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileEditFragment"
        android:name="com.example.maxwayapp.ui.profile.profile_edit.ProfileEditFragment"
        android:label="Profilni tahrirlash" />
    <fragment
        android:id="@+id/filliallarFragment"
        android:name="com.example.maxwayapp.ui.profile.Filliallar.FilliallarFragment"
        android:label="Filliallar" >
        <action
            android:id="@+id/action_filliallarFragment_to_fillialFragment"
            app:destination="@id/fillialFragment" />
    </fragment>
    <fragment
        android:id="@+id/fillialFragment"
        android:name="com.example.maxwayapp.ui.profile.Fillial.FillialFragment"
        android:label="Fillial" />
    <fragment
        android:id="@+id/sozlamalarFragment"
        android:name="com.example.maxwayapp.ui.profile.Sozlamalar.SozlamalarFragment"
        android:label="Sozlamalar" />
    <fragment
        android:id="@+id/xizmatlarHaqidaFragment"
        android:name="com.example.maxwayapp.ui.profile.xizmatlar.XizmatlarHaqidaFragment"
        android:label="Xizmatlar haqida" >
        <action
            android:id="@+id/action_xizmatlarHaqidaFragment_to_bizHaqimizdaFragment"
            app:destination="@id/bizHaqimizdaFragment" />
    </fragment>
    <fragment
        android:id="@+id/bizHaqimizdaFragment"
        android:name="com.example.maxwayapp.ui.profile.xizmatlar.bizhaqimizda.BizHaqimizdaFragment"
        android:label="Biz haqimizda"
        />
</navigation>